--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "start": "react-scripts start"
   },
@@ -16,6 +17,7 @@
   "bugs": {
     "url": "https://github.com/yk-hts/react-tutorial/issues"
   },
+  "homepage": "https://yk-hts.github.io/react-tutorial/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "bulma": "^0.9.0",
@@ -24,6 +26,7 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "react-scripts": "^3.4.1"
   },
   "description": "",
